<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hour"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_bg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/minute"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_bg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/second"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_bg"
        android:importantForAutofill="no" />
</LinearLayout>