<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_bg_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

<LinearLayout
    android:id="@+id/select_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_song_hint"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        android:background="#00000000"
        android:padding="12dp"
        android:inputType="text"
        android:importantForAutofill="no" />
    <ListView
        android:id="@+id/lv_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00000000"/>
</LinearLayout>

</FrameLayout>
